# wallpaper

./: .gitignore  .pre-commit-config.yaml  APIKey.py  README.md  configs.py  enlighten_test.py  gen_colors.py  gen_requirements.bat  gen_requirments.bat  ip.py  package.json  project-words.txt  pyproject.toml  requirements.txt  scheduler.bat  start.bat  wallhavenDownload.py
Enlighten/: context_manager.py  demo.py  enlighten_test.py  gen_colors.py  generate_colors.py  multicolored.py  multiple_logging.py  prefixes.py
