[tool.poetry]
package-mode = false
authors = ["vanton"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/vanton/wallpaper"
homepage = "https://github.com/vanton/wallpaper"
keywords = ["wallhaven", "python", "wallpaper"]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^24.1.0"
aiohttp = "^3.11.9"
asyncio = "^3.4.3"
requests = "^2.32.3"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
types-aiofiles = "^22.1.0"
types-requests = "^2.28.11"
pre-commit = "^4.0.1"

[build-system]
requires = ['poetry-core>=1.0']
build-backend = 'poetry.core.masonry.api'
