[tool.poetry]
package-mode = false
authors = ["vanton"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/vanton/wallpaper"
homepage = "https://github.com/vanton/wallpaper"
keywords = ["wallhaven", "python", "wallpaper"]

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^24.1.0"
aiohttp = "^3.11.9"
asyncio = "^3.4.3"
requests = "^2.32.3"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
types-aiofiles = "^22.1.0"
types-requests = "^2.28.11"
pre-commit = "^4.0.1"

[build-system]
requires = ['poetry-core>=1.0']
build-backend = 'poetry.core.masonry.api'

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
# Assume Python 3.10
target-version = "py310"
include = ["pyproject.toml", "./*.py", "src/**/*.py", "scripts/**/*.py"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E741"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
