[tool.poetry]
authors = ["vanton"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
homepage = "https://github.com/vanton/wallpaper"
keywords = ["python", "wallhaven", "wallpaper"]
package-mode = false
readme = "README.md"
repository = "https://github.com/vanton/wallpaper"

[tool.poetry.dependencies]
aiofiles = "^24.1.0"
aiohttp = "^3.11.10"
asyncio = "^3.4.3"
python = "^3.10"
requests = "^2.32.3"
rich = "^13.9.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest-asyncio = "^0.24.0"
types-aiofiles = "^22.1.0"
types-requests = "^2.28.11"

[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core>=1.0']

[tool.ruff]
extend-select = ["I"]
# Same as Black.
indent-width = 4
line-length = 88
# Assume Python 3.10
include = ["./*.py", "pyproject.toml", "scripts/**/*.py", "src/**/*.py"]
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
ignore = ["E741"]
select = ["E4", "E7", "E9", "F"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
docstring-code-format = false
docstring-code-line-length = "dynamic"
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
